--- a/requirements.txt
+++ b/requirements.txt
@@ -9,20 +9,26 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 Deprecated==1.2.13
-Django==4.0.3
+Django==3.2.12
 django-model-utils==4.2.0
+django-seed==0.3.1
+django-timezone-field==4.2.3
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
+Faker==13.3.3
 kombu==5.2.4
 packaging==21.3
 prompt-toolkit==3.0.28
 psycopg2-binary==2.9.3
 PyJWT==2.3.0
 pyparsing==3.0.7
+python-crontab==2.6.0
+python-dateutil==2.8.2
 pytz==2022.1
 redis==4.2.0
 six==1.16.0
 sqlparse==0.4.2
+toposort==1.7
 typing_extensions==4.1.1
 vine==5.0.0
 wcwidth==0.2.5
